#6: Apply Virtual thread